# hodis

./: Cargo.toml  justfile
migrations/: init.sql
src/: db.rs  index.rs  jobs.rs  main.rs  tec.rs
